Measure the engine instead of rebuilding it
W02, W04, W05, W06, and W07 stop reimplementing systems that already
exist. W02 reads a Spark stage DAG, W04 Part 1 drives Flink and compares
against Structured Streaming, W05 keeps the shuffle build and moves skew
diagnosis to the Spark UI, W06 measures DuckDB, W07 makes Spark's own
planner change its mind four times. W04 Part 2 stays hand-built: no
framework will compare block, drop, and spill for you.

Scala cut. W07 was its only real unit and W14's JAR is now Maven and
Java, so four languages become three. Go stays at W00, W01, W03.

Reference coverage: DDIA reaches 13 of 14 chapters (Ch.3 to W06/W07,
Ch.5 to W08, Ch.6 to W13; Ch.14 deliberately out of scope). Burns goes
from 3 of 16 to 12 of 16, and its link now points at the 2nd edition
rather than a free PDF whose chapter numbers do not match.